--- a/src/componentsHeader/Header.module.css
+++ b/src/componentsHeader/Header.module.css
@@ -64,28 +64,27 @@
 }
 
 .group img {
+  display: none;
   position: absolute;
   right: 0;
   top: 0;
-  width: 400px;
+  width: 40px;
   z-index: -1;
   opacity: 0.8;
 }
 
 @media (max-width: 992px) {
   .header {
-    flex-direction: column;
-    align-items: flex-start;
     gap: 1rem;
   }
 
   .headerUl {
-    gap: 1.2rem;
+    display: none;
   }
 
   .login {
     width: 100%;
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
 
   .group img {
@@ -105,13 +104,11 @@
   }
 
   .headerUl {
-    flex-direction: column;
-    gap: 1rem;
+    display: none;
   }
 
   .login {
-    flex-direction: column;
-    gap: 1rem;
+    display: flex;
   }
 
   .headerBtn {
@@ -120,6 +117,7 @@
   }
 
   .group img {
-    display: none;
+    display: block;
+    width: 40px;
   }
 }
