--- a/src/componentsFooter/Footer.module.css
+++ b/src/componentsFooter/Footer.module.css
@@ -27,6 +27,9 @@
   gap: 100px;
 }
 
+.footerUl1 {
+  list-style-type: none;
+}
 .footerUl {
   list-style-type: none;
 }
@@ -54,9 +57,6 @@
 }
 
 @media (max-width: 1050px) {
-  .footerTarmoq {
-    gap: 5px;
-  }
   .footerDiv {
     gap: 25px;
     display: flex;
@@ -64,13 +64,7 @@
   }
 }
 
-@media (max-width: 770px) {
-  .footerUl {
-    display: none;
-  }
-}
-
-@media (max-width: 400px) {
+@media (max-width: 560px) {
   .myFooter {
     flex-direction: column;
     align-items: center;
@@ -78,10 +72,15 @@
   }
 
   .footerLogo {
-    margin-bottom: 15px;
+    padding-bottom: 15px;
   }
 
   .footerTarmoq {
-    justify-content: center;
+    display: grid;
+    justify-content: end;
+  }
+
+  .footer1 {
+    display: grid;
   }
 }
